<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/pendaftaran"
            android:textSize="15pt"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/daftarNamaErr"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/daftarNama"
                android:layout_marginTop="10dp"
                android:hint="@string/addNama"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/daftarAlamatErr"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/daftarAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/addAlamat"
                android:inputType="textImeMultiLine"
                android:maxLines="3"
                android:singleLine="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/jk"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radioJK">

                <RadioButton
                    android:id="@+id/radioLaki"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/lk"/>

                <RadioButton
                    android:id="@+id/radioPerempuan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/pr"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/agama"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radioAgama">

                <RadioButton
                    android:id="@+id/radioIslam"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/islam"/>

                <RadioButton
                    android:id="@+id/radioKristen"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/kristen"/>

                <RadioButton
                    android:id="@+id/radioKatolik"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/katolik"/>
            </RadioGroup>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radioAgama2">

                <RadioButton
                    android:id="@+id/radioHindu"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/hindu"/>

                <RadioButton
                    android:id="@+id/radioBuddha"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/buddha"/>

                <RadioButton
                    android:id="@+id/radioKonghucu"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/konghucu"/>
            </RadioGroup>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radioAgama3">

                <RadioButton
                    android:id="@+id/radioAgamaPK"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/kepercayaan"/>
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:id="@+id/addEmailErr">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addEmail"
                android:layout_marginTop="10dp"
                android:hint="@string/loginEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:id="@+id/addPassErr"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addPass"
                android:layout_marginTop="10dp"
                android:hint="@string/loginPass"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:id="@+id/addRePassErr"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addRePass"
                android:layout_marginTop="10dp"
                android:hint="@string/repass"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_marginLeft="10dp"
                android:text="@string/daftar"
                android:backgroundTint="@color/teal_200"/>

            <Button
                android:id="@+id/btnKembali"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_marginLeft="10dp"
                android:text="@string/kembali"
                android:backgroundTint="@color/teal_200"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>